--- a/404.html
+++ b/404.html
@@ -5,5 +5,9 @@
     <title>Single Page Apps for GitHub Pages</title>
   </head>
   <body>
+      <div class="container">
+        <h1>Something went wrong?</h1>
+        <a href="https://leshnik-t.github.io/react-firebase-portfolio" title="Go to the homepage" rel="noopener noreferrer">Go to the homepage</a>
+      </div>
   </body>
 </html>
